# bevy-web-template

./: Cargo.toml  LICENSE  Makefile.toml  README.md  index.html
src/: main.rs
