[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png"
]

[dependencies]
bevy = {version="0.4", default-features=false}
bevy_webgl2 = "0.4.3"

[profile.release]
opt-level = "s"

